# thales

./: .travis.yml  Cargo.toml  license-mit.txt  readme.md
.travis/: coverage.sh
src/: aabb.rs  convex_hull.rs  lib.rs  matrix.rs  radians.rs  vector.rs
src/linear_transformation/: mod.rs  rotation.rs
src/linear_transformations/: rotation.rs
src/polygon/: builder.rs
