[package]
name = "thales"
description = "Basic linear and vector geometry for two-dimensional Euclidean geometry"
version = "0.1.0"
authors = [
    "Ruben Schmidmeister <ruben@myelin.ch>",
    "Jan Nils Ferner <jan@myelin.ch>",
    "Mathias Fischler <mathias@myelin.ch>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
repository = "https://github.com/bash/thales"
homepage = "https://github.com/bash/thales"
documentation = "https://docs.rs/thales"
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
itertools = "0.8"

[dev-dependencies]
nearly_eq = "0.2.4"
